# glitch_me

./: .flake8  .gitignore  .mailmap  LICENSE  MANIFEST.in  Make-Readme-Examples.ps1  README.md  TODO.md  __main__.py  effects.py  pyproject.toml  sample_transform.py  setup.py
glitch_me/: __main__.py  effects.py  sample_transform.py
